Fixes a layout bug on page load.

--- a/src/assets/styles/layouts/_header.scss
+++ b/src/assets/styles/layouts/_header.scss
@@ -32,13 +32,10 @@
   @include box-shadow(0 2px 3px rgba(0,0,0,0.05));
 
     z-index: $zindexNavigation;
-
-    &.headroom {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-    }
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
 
     &.headroom--pinned {
         @include transform(translateY(0%));
